fix overflow

--- a/src/app/index.module.scss
+++ b/src/app/index.module.scss
@@ -1,24 +1,22 @@
-.galaxy {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  height: 1px;
-  width: 1px;
-  background-color: #fff;
-  border-radius: 50%;
-  box-shadow: -24vw -44vh 2px 2px #fff, 38vw -4vh 0px 0px #fff,
-    -20vw -48vh 1px 2px #fff, -39vw 38vh 3px 1px #fff, -42vw -11vh 0px 3px #fff,
-    12vw 15vh 3px 3px #fff, 42vw 6vh 3px 2px #fff, -8vw 9vh 0px 2px #fff,
-    34vw -38vh 1px 0px #fff, -17vw 45vh 3px 1px #fff, 22vw -36vh 3px 2px #fff,
-    -42vw 1vh 1px 0px #fff;
-  animation: zoom 10s alternate infinite;
+.gradient {
+  --size: 500px;
+
+  width: var(--size);
+  height: var(--size);
+  filter: blur(calc(var(--size) / 5));
+  background-image: linear-gradient(
+    hsl(158, 82, 57, 75%),
+    hsl(252, 82, 57, 75%)
+  );
+  border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
 }
 
-@keyframes zoom {
-  0% {
-    transform: scale(1);
-  }
-  100% {
-    transform: scale(1.5);
-  }
+.gradient-container {
+  position: absolute;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  place-content: flex-end;
+  align-items: flex-end;
 }
